syntax = "proto3";

import "google/protobuf/timestamp.proto";

package weatherServices;

service WeatherService {
    rpc GetWeatherForecast (GetWeatherForecastRequest) returns (GetWeatherForecastResponse);
}

message GetWeatherForecastRequest {
    optional int32 days = 1;
}

message GetWeatherForecastResponse {
    repeated WeatherForecast weatherForecast = 1;
}

message WeatherForecast {
    google.protobuf.Timestamp date = 1;
    int32 temperatureC = 2;
    string summary = 3;
}
